--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "^0.71.19",
     "react-native-svg": "14.1.0",
     "react-native-web": "^0.18.12",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
