--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pool-hall-waitlist",
   "version": "1.0.0",
-  "homepage": "https://tylerdipietro.github.io/pool-hall-frontend/",
+  "homepage": "/",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
