Vercel rewrites for safari

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/api/:match*",
+      "destination": "https://pool-hall-waitlist-3b8c64cbf25d.herokuapp.com/api/:match*"
+    }
   ]
 }
