--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@expo/webpack-config": "~19.0.1",
     "expo": "~50.0.0",
     "expo-linking": "~4.0.1",
@@ -26,8 +27,7 @@
     "react-native": "^0.71.19",
     "react-native-svg": "14.1.0",
     "react-native-web": "^0.18.12",
-    "socket.io-client": "^4.6.1",
-    "@expo/metro-runtime": "~3.1.3"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,6 +37,7 @@
     "gh-pages": "^6.3.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
+    "vite": "^6.3.5",
     "vm-browserify": "^1.1.2"
   },
   "private": true
