--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/webpack-config": "~19.0.1",
-    "expo": "~50.0.0",
-    "expo-linking": "~4.0.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.24.13",
-    "react": "18.2.0",
-    "react-dom": "~18.1.0",
-    "react-native": "^0.71.19",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "^0.18.12",
+    "expo": "^53.0.0",
+    "expo-linking": "~7.1.5",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.14",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
