--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
+  "buildCommand": "npx expo export -p web",
+  "outputDirectory": "dist",
+  "devCommand": "expo start",
+  "cleanUrls": true,
+  "framework": null,
   "rewrites": [
     {
       "source": "/api/:match*",
       "destination": "https://api.tylerdipietro.com/api/:match*"
     },
     {
-      "source": "/(.*)",
+      "source": "/:path*",
       "destination": "/"
     }
   ]
