Modify vercel.json sources

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,8 @@
     {
       "source": "/:path*",
       "destination": "/"
-    }
+    },
+    { "source": "/auth", "destination": "/index.html" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
