remove dist as path

--- a/vercel.json
+++ b/vercel.json
@@ -47,7 +47,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/dist/index.html"
+      "destination": "/index.html"
     }
   ]
 }
